--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
@@ -1,6 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
+{%if perms.gestion_administrativo.view_funcionario%}
 <div class="card">
 	<div class="card-body">
 		<center>  <h2> <i class="bi-person-check-fill">Listado de Funcionarios</i></h2> </center>    
@@ -8,10 +9,12 @@
 <table  align="right" >
     <tr>
     <td> 
+		{%if perms.gestion_administrativo.add_funcionario%}
 		<a href="/administrativo/agregar_funcionario/" class="btn btn-success">
 			<i class="bi-person-plus-fill"></i>
 			Agregar un funcionario
 		</a> 
+		{%endif%}
 	</td>
     </tr>
 </table>
@@ -44,14 +47,18 @@
 			<!-- <td>{{ funcionario.cargos.cargo }}</td> -->
 			
 			<td>
+				{%if perms.gestion_administrativo.change_funcionario%}
 				<a class="btn btn-primary" href="/administrativo/modificar_funcionario/{{funcionario.id_funcionario}}">
 					<i class="bi-pencil-square"></i>
 					Editar
 				</a>
+				{%endif%}
+				{%if perms.gestion_administrativo.delete_funcionario%}
 				<a class="btn btn-danger" href="/administrativo/eliminar_funcionario/{{funcionario.id_funcionario}}">
 					<i class="bi-trash-fill" ></i>
 					Eliminar
 				</a>
+				{%endif%}
 			</td>
 		</tr>
 		{% endfor %}
@@ -64,5 +71,5 @@
 
 	</div>
 </div>
-
+{% endif %}
 {% endblock%}
