--- a/Proyecto2/SmileSoft/gestion_roles/templates/roles/agregar_roles.html
+++ b/Proyecto2/SmileSoft/gestion_roles/templates/roles/agregar_roles.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-
+{%if perms.gestion_roles.add_rol%} 
   <div class=" col-md-10 offset-md-1" >
         <div class="card">
             <br>
@@ -38,4 +38,5 @@
              <div>
         </div>
 </div>
+{%endif%}
 {%endblock%}
