--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_cargo.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_cargo.html
@@ -1,16 +1,19 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
+{%if perms.gestion_administrativo.view_cargo%}
 <div class="card">
     <div class="card-body">
         <center>  <h2><i class="bi-clipboard-check">Listado de Cargos</i></h2> </center>
         <table  align="right">
             <tr>
             <td> 
+                {%if perms.gestion_administrativo.add_cargo%}
                 <a href="/administrativo/agregar_cargo/" class="btn btn-success">
                     <i class="bi-file-earmark-plus"></i>
                     Agregar un cargo
                 </a>
+                {%endif%}
             </td>
             </tr>
         </table>
@@ -34,14 +37,19 @@
                         <td>{{ cargo.nombre }}</td>
                         <td>{{ cargo.salario }}</td>
                         <td>
+                             {%if perms.gestion_administrativo.change_cargo%}
                             <a class="btn btn-primary" href="/administrativo/modificar_cargo/{{cargo.nombre}}">
                                 <i class="bi-pencil-square"></i>
                                 Editar
                             </a>
+                            {%endif%}
+                            
+                            {%if perms.gestion_administrativo.delete_cargo%}
                             <a class="btn btn-danger" href="/administrativo/eliminar_cargo/{{cargo.nombre}}">
                                 <i class="bi-trash-fill" ></i>
                                 Eliminar
                             </a>
+                            {%endif%}
                         </td>
                     </tr>
                     {% endfor %}
@@ -58,7 +66,6 @@
 </div>
 
 
-
-
+{% endif %}
 
 {% endblock%}
