--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/agregar_tratamiento.html
@@ -1,12 +1,13 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-
+  {%if perms.gestion_tratamiento.add_tratamiento%}
   <div class=" col-md-10 offset-md-1" >
         <div class="card">
             <br>
             <center>  <h2>Agregar Tratamiento</h2> </center>      
                 <!-- <form method="POST" id="group_form" novalidate=""> -->
+           
                 <form action="" method="post">
                     {%csrf_token%}
                     <div style="margin: 20px;" > 
@@ -36,9 +37,16 @@
                 </form>
             </div>
              <div>
+
         </div>
 </div>
-
+{% else%}
+<h2 class="titulo text-center">
+                  No tiene permisos para ingresar a esta sección
+                 
+                  
+              </h2>
+{%endif%}
 <hr>
                         
 <table  align="right" >
